--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Turismo SanMartin Landing Page Site"/>
     <meta name="keywords" content="VisitaSanMartin, BestPractices, ExamenParcial, Software Development"/>
     <meta name="author" content="TASI.Grupo1"/>
-    <link rel="stylesheet" href="src/assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>TurismoSanMartin Landing Page</title>
 </head>
 <body>
