--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Turismo SanMartin Landing Page Site"/>
     <meta name="keywords" content="VisitaSanMartin, BestPractices, ExamenParcial, Software Development"/>
     <meta name="author" content="TASI.Grupo1"/>
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../src/assets/styles/style.css">
     <title>TurismoSanMartin Landing Page</title>
 </head>
 <body>
@@ -19,16 +19,16 @@
         </nav>-->
         <a href="#" class="btn">
             Registrate
-            <img src="./assets/images/icons/white_next_right.svg" alt="Flecha derecha">
+            <img src="../src/assets/images/icons/white_next_right.svg" alt="Flecha derecha">
         </a>
         <div class="botonesDescargaHeader">
-            <a href="#" class="btn3"><img src="./assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img></a>
-            <a href="#" class="btn3"><img src="./assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img></a>
+            <a href="#" class="btn3"><img src="../src/assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img></a>
+            <a href="#" class="btn3"><img src="../src/assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img></a>
         </div>
     </header>   
 <main>
     <section id="hero" class="hero">
-        <div class="background-image" style="background-image: url(./assets/images/pictures/headerHD.png)" role="img"
+        <div class="background-image" style="background-image: url(../src/assets/images/pictures/headerHD.png)" role="img"
         aria-label="Altomayo"></div>
         <hgroup >
             <h1> Disfruta de San Martín como nunca antes</h1>
@@ -42,103 +42,107 @@
     <section id="descubre" class ="descubre">
         <div class="descubre-descubre">
           <span class="descubre-text h2"><span>Gana y disfruta</span></span>
-          <div class="descubre-carditem4">
-            <div class="descubre-flexrow">
-              <div class="descubre-icncirclecirclemdprimarycolor">
-                <img
-                  src="assets/images/icons/money.svg"
-                  alt="grommeticonsmoney1097"
-                  class="descubre-grommeticonsmoney"
-                />
+          <div class="primeraFila">
+            <div class="descubre-carditem4">
+              <div class="descubre-flexrow">
+                <div class="descubre-icncirclecirclemdprimarycolor">
+                  <img
+                    src="assets/images/icons/money.svg"
+                    alt="grommeticonsmoney1097"
+                    class="descubre-grommeticonsmoney"
+                  />
+                </div>
+                <div class="descubre-div">
+                  <h6 class="descubre-text02">
+                    <span class="descubre-text03">
+                      <span>Canjea y Vive:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Usa tus puntos en nuestros negocios asociados y obten
+                      promociones y descuentos exclusivos en prodcutos y
+                      experiencias únicas.
+                    </span>
+                  </h6>
+                </div>
               </div>
-              <div class="descubre-div">
-                <h6 class="descubre-text02">
-                  <span class="descubre-text03">
-                    <span>Canjea y Vive:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Usa tus puntos en nuestros negocios asociados y obten
-                    promociones y descuentos exclusivos en prodcutos y
-                    experiencias únicas.
-                  </span>
-                </h6>
+            </div>
+            <div class="descubre-carditem41">
+              <div class="descubre-flexrow1">
+                <div class="descubre-icncirclecirclemdprimarycolor1">
+                  <img
+                    src="assets/images/icons/knowledge.svg"
+                    alt="gameiconsclassicalknowledge1097"
+                    class="descubre-gameiconsclassicalknowledge"
+                  />
+                </div>
+                <div class="descubre-div1">
+                  <h6 class="descubre-text08">
+                    <span class="descubre-text09">
+                      <span>Conexión cultural:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Establece un vínculo con la cultura de tu destino, aprende
+                      su historia y legado, enriquece tu viaje con información
+                      detallada y experiencias inmersivas.
+                    </span>
+                  </h6>
+                </div>
               </div>
             </div>
           </div>
-          <div class="descubre-carditem41">
-            <div class="descubre-flexrow1">
-              <div class="descubre-icncirclecirclemdprimarycolor1">
-                <img
-                  src="assets/images/icons/knowledge.svg"
-                  alt="gameiconsclassicalknowledge1097"
-                  class="descubre-gameiconsclassicalknowledge"
-                />
+          <div class="segundaFila">
+            <div class="descubre-carditem42">
+              <div class="descubre-flexrow2">
+                <div class="descubre-icncirclecirclemdprimarycolor2">
+                  <img
+                    src="assets/images/icons/routes.svg"
+                    alt="mdiroutes1097"
+                    class="descubre-mdiroutes"
+                  />
+                </div>
+                <div class="descubre-div2">
+                  <h6 class="descubre-text14">
+                    <span class="descubre-text15">
+                      <span>Rutas y Recuerdos:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Completa rutas turísticas, cumple objetivos y al final,
+                      recibe un recopilatorio digital de tu experiencia. ¡Guarda y
+                      revive tus aventuras!
+                    </span>
+                  </h6>
+                </div>
               </div>
-              <div class="descubre-div1">
-                <h6 class="descubre-text08">
-                  <span class="descubre-text09">
-                    <span>Conexión cultural:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Establece un vínculo con la cultura de tu destino, aprende
-                    su historia y legado, enriquece tu viaje con información
-                    detallada y experiencias inmersivas.
-                  </span>
-                </h6>
-              </div>
-            </div>
-          </div>
-          <div class="descubre-carditem42">
-            <div class="descubre-flexrow2">
-              <div class="descubre-icncirclecirclemdprimarycolor2">
-                <img
-                  src="assets/images/icons/routes.svg"
-                  alt="mdiroutes1097"
-                  class="descubre-mdiroutes"
-                />
-              </div>
-              <div class="descubre-div2">
-                <h6 class="descubre-text14">
-                  <span class="descubre-text15">
-                    <span>Rutas y Recuerdos:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Completa rutas turísticas, cumple objetivos y al final,
-                    recibe un recopilatorio digital de tu experiencia. ¡Guarda y
-                    revive tus aventuras!
-                  </span>
-                </h6>
-              </div>
-            </div>
-          </div>
-          <div class="descubre-carditem43">
-            <div class="descubre-flexrow3">
-              <div class="descubre-icncirclecirclemdprimarycolor3">
-                <img
-                  src="assets/images/icons/compass.svg"
-                  alt="icomoonfreecompass1097"
-                  class="descubre-icomoonfreecompass"
-                />
-              </div>
-              <div class="descubre-div3">
-                <h6 class="descubre-text20">
-                  <span class="descubre-text21">
-                    <span>Explora y Acumula:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Visita puntos de interés y gana puntos automáticamente con
-                    geolocalización. Multiplica tus puntos interactuando en
-                    lugares emblemáticos.
-                  </span>
-                </h6>
+            </div>          
+            <div class="descubre-carditem43">
+              <div class="descubre-flexrow3">
+                <div class="descubre-icncirclecirclemdprimarycolor3">
+                  <img
+                    src="assets/images/icons/compass.svg"
+                    alt="icomoonfreecompass1097"
+                    class="descubre-icomoonfreecompass"
+                  />
+                </div>
+                <div class="descubre-div3">
+                  <h6 class="descubre-text20">
+                    <span class="descubre-text21">
+                      <span>Explora y Acumula:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Visita puntos de interés y gana puntos automáticamente con
+                      geolocalización. Multiplica tus puntos interactuando en
+                      lugares emblemáticos.
+                    </span>
+                  </h6>
+                </div>
               </div>
             </div>
           </div>
@@ -163,124 +167,6 @@
         </div>
     </section>
 
-
- <section id="testimonials" class="testimonials">
-        <div class="testimonials-testimonials">
-          <span class="testimonials-text h2"><span>Testimonios</span></span>
-          <div class="testimonials-testimonialscarditem6">
-            <div class="testimonials-media">
-              <div class="testimonials-cover"></div>
-            </div>
-            <div class="testimonial-person">
-                <img src = "./assets/images/pictures/manOne.jpg">
-            </div>
-            <div class="testimonials-cardcontent">
-              <div class="testimonials-div">
-                <h3 class="testimonials-text02 h3"><span>Mario Tocto</span></h3>
-                <h6 class="testimonials-text04 h6">
-                  <span></span>
-                </h6>
-              </div>
-              <div class="testimonials-stars">
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_off.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar2"
-                />
-              </div>
-              <span class="testimonials-text06 paragraph">
-                <span>
-                  <span>Me ayudó a descubrir lugares ocultos</span>
-                  <br />
-                  <span>en San Martín. Logré completar </span>
-                  <br />
-                  <span>todas las rutas turísticas de Sauce.</span>
-                  <br />
-                  <span>!La Laguna Azul es un sueño!</span>
-                </span>
-              </span>
-            </div>
-          </div>
-		  </span><br /><span></span>
-          <div class="testimonials-testimonialscarditem61">
-            <div class="testimonials-media1">
-              <div class="testimonials-cover1"></div>
-            </div>
-            <div class="testimonial-person1">
-                <img src = "./assets/images/pictures/mainTwo.png">
-            </div>
-            <div class="testimonials-cardcontent1">
-              <div class="testimonials-div1">
-                <h3 class="testimonials-text08 h3">
-                  <span>Jaime Martinez</span>
-                </h3>
-                <h6 class="testimonials-text10 h6">
-                  <span></span>
-                </h6>
-              </div>
-              <div class="testimonials-stars1">
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-                <img
-                  src="./assets/images/icons/star_on.svg"
-                  alt="icnbxstarI1077"
-                  class="testimonials-icnbxstar"
-                />
-              </div>
-              <span class="testimonials-text12 paragraph">
-                <span>
-                  <span>¡Esta aplicación cambió mi forma </span>
-                  <br />
-                  <span>de viajar! Me aprendí el nombre</span>
-                  <br />
-                  <span>de las cataratas y encima gané</span>
-                  <br />
-                  <span>premios.</span>
-                </span>
-              </span>
-            </div>
-          </div>
-        </div>
-    </section>
-
 </main>
 
 <footer>
@@ -288,21 +174,21 @@
         <div>
             <h2 class="title">¡Descarga GRATIS nuestra app!</h2>
             <div class="botonesDescarga">
-                <a href="#" class="btn"><img src="./assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img>Play Store</a>
-                <a href="#" class="btn"><img src="./assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img>App Store</a>
+                <a href="#" class="btn"><img src="../src/assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img>Play Store</a>
+                <a href="#" class="btn"><img src="../src/assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img>App Store</a>
             </div>
         </div>
     </div>
     <div class="contactos">
         <h3 class="title">Contáctanos</h3>
-        <div class="infoContacto"><img src="./assets/images/icons/white_mail_mini.svg" alt="Icono de Correo"></img>Email: dircetursm@gmail.com</div>
-        <div class="infoContacto"><img src="./assets/images/icons/white_maps_pin.svg" alt="Icono de Dirección"></img>Dirección: Jr. San Martín 301 - Moyobamba</div>
-        <div class="infoContacto"><img src="./assets/images/icons/white_phone.svg" alt="Icono de Teléfono"></img>Teléfono: (+51) 042 562043</div>
+        <div class="infoContacto"><img src="../src/assets/images/icons/white_mail_mini.svg" alt="Icono de Correo"></img>Email: dircetursm@gmail.com</div>
+        <div class="infoContacto"><img src="../src/assets/images/icons/white_maps_pin.svg" alt="Icono de Dirección"></img>Dirección: Jr. San Martín 301 - Moyobamba</div>
+        <div class="infoContacto"><img src="../src/assets/images/icons/white_phone.svg" alt="Icono de Teléfono"></img>Teléfono: (+51) 042 562043</div>
         <div class="iconosRedes">
-            <a href="#" ><img src="./assets/images/icons/green_facebook_mini.svg" alt="Facebook"></img></a>
-            <a href="#" ><img src="./assets/images/icons/green_twitter_mini.svg" alt="Twitter"></img></a>
-            <a href="#" ><img src="./assets/images/icons/green_instagram_mini.svg" alt="Instagram"></img></a>
-            <a href="#" ><img src="./assets/images/icons/green_tiktok_mini.svg" alt="Tiktok"></img></a>
+            <a href="#" ><img src="../src/assets/images/icons/green_facebook_mini.svg" alt="Facebook"></img></a>
+            <a href="#" ><img src="../src/assets/images/icons/green_twitter_mini.svg" alt="Twitter"></img></a>
+            <a href="#" ><img src="../src/assets/images/icons/green_instagram_mini.svg" alt="Instagram"></img></a>
+            <a href="#" ><img src="../src/assets/images/icons/green_tiktok_mini.svg" alt="Tiktok"></img></a>
         </div>
     </div>
     
@@ -320,6 +206,6 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="./assets/scripts/main.js" type="text/javascript"></script>
+<script src="../src/assets/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
