--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Turismo SanMartin Landing Page Site"/>
     <meta name="keywords" content="VisitaSanMartin, BestPractices, ExamenParcial, Software Development"/>
     <meta name="author" content="TASI.Grupo1"/>
-    <link rel="stylesheet" href="../src/assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>TurismoSanMartin Landing Page</title>
 </head>
 <body>
@@ -19,16 +19,16 @@
         </nav>-->
         <a href="#" class="btn">
             Registrate
-            <img src="../src/assets/images/icons/white_next_right.svg" alt="Flecha derecha">
+            <img src="./assets/images/icons/white_next_right.svg" alt="Flecha derecha">
         </a>
         <div class="botonesDescargaHeader">
-            <a href="#" class="btn3"><img src="../src/assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img></a>
-            <a href="#" class="btn3"><img src="../src/assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img></a>
+            <a href="#" class="btn3"><img src="./assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img></a>
+            <a href="#" class="btn3"><img src="./assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img></a>
         </div>
     </header>   
 <main>
     <section id="hero" class="hero">
-        <div class="background-image" style="background-image: url(../src/assets/images/pictures/headerHD.png)" role="img"
+        <div class="background-image" style="background-image: url(./assets/images/pictures/headerHD.png)" role="img"
         aria-label="Altomayo"></div>
         <hgroup >
             <h1> Disfruta de San Martín como nunca antes</h1>
@@ -174,21 +174,21 @@
         <div>
             <h2 class="title">¡Descarga GRATIS nuestra app!</h2>
             <div class="botonesDescarga">
-                <a href="#" class="btn"><img src="../src/assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img>Play Store</a>
-                <a href="#" class="btn"><img src="../src/assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img>App Store</a>
+                <a href="#" class="btn"><img src="./assets/images/icons/green_playstore_mini.svg" alt="Icono de Play Store"></img>Play Store</a>
+                <a href="#" class="btn"><img src="./assets/images/icons/green_apple_mini.svg" alt="Icono de Apple Store"></img>App Store</a>
             </div>
         </div>
     </div>
     <div class="contactos">
         <h3 class="title">Contáctanos</h3>
-        <div class="infoContacto"><img src="../src/assets/images/icons/white_mail_mini.svg" alt="Icono de Correo"></img>Email: dircetursm@gmail.com</div>
-        <div class="infoContacto"><img src="../src/assets/images/icons/white_maps_pin.svg" alt="Icono de Dirección"></img>Dirección: Jr. San Martín 301 - Moyobamba</div>
-        <div class="infoContacto"><img src="../src/assets/images/icons/white_phone.svg" alt="Icono de Teléfono"></img>Teléfono: (+51) 042 562043</div>
+        <div class="infoContacto"><img src="./assets/images/icons/white_mail_mini.svg" alt="Icono de Correo"></img>Email: dircetursm@gmail.com</div>
+        <div class="infoContacto"><img src="./assets/images/icons/white_maps_pin.svg" alt="Icono de Dirección"></img>Dirección: Jr. San Martín 301 - Moyobamba</div>
+        <div class="infoContacto"><img src="./assets/images/icons/white_phone.svg" alt="Icono de Teléfono"></img>Teléfono: (+51) 042 562043</div>
         <div class="iconosRedes">
-            <a href="#" ><img src="../src/assets/images/icons/green_facebook_mini.svg" alt="Facebook"></img></a>
-            <a href="#" ><img src="../src/assets/images/icons/green_twitter_mini.svg" alt="Twitter"></img></a>
-            <a href="#" ><img src="../src/assets/images/icons/green_instagram_mini.svg" alt="Instagram"></img></a>
-            <a href="#" ><img src="../src/assets/images/icons/green_tiktok_mini.svg" alt="Tiktok"></img></a>
+            <a href="#" ><img src="./assets/images/icons/green_facebook_mini.svg" alt="Facebook"></img></a>
+            <a href="#" ><img src="./assets/images/icons/green_twitter_mini.svg" alt="Twitter"></img></a>
+            <a href="#" ><img src="./assets/images/icons/green_instagram_mini.svg" alt="Instagram"></img></a>
+            <a href="#" ><img src="./assets/images/icons/green_tiktok_mini.svg" alt="Tiktok"></img></a>
         </div>
     </div>
     
@@ -206,6 +206,6 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="../src/assets/scripts/main.js" type="text/javascript"></script>
+<script src="./assets/scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
