--- a/index.html
+++ b/index.html
@@ -42,103 +42,107 @@
     <section id="descubre" class ="descubre">
         <div class="descubre-descubre">
           <span class="descubre-text h2"><span>Gana y disfruta</span></span>
-          <div class="descubre-carditem4">
-            <div class="descubre-flexrow">
-              <div class="descubre-icncirclecirclemdprimarycolor">
-                <img
-                  src="assets/images/icons/money.svg"
-                  alt="grommeticonsmoney1097"
-                  class="descubre-grommeticonsmoney"
-                />
+          <div class="primeraFila">
+            <div class="descubre-carditem4">
+              <div class="descubre-flexrow">
+                <div class="descubre-icncirclecirclemdprimarycolor">
+                  <img
+                    src="assets/images/icons/money.svg"
+                    alt="grommeticonsmoney1097"
+                    class="descubre-grommeticonsmoney"
+                  />
+                </div>
+                <div class="descubre-div">
+                  <h6 class="descubre-text02">
+                    <span class="descubre-text03">
+                      <span>Canjea y Vive:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Usa tus puntos en nuestros negocios asociados y obten
+                      promociones y descuentos exclusivos en prodcutos y
+                      experiencias únicas.
+                    </span>
+                  </h6>
+                </div>
               </div>
-              <div class="descubre-div">
-                <h6 class="descubre-text02">
-                  <span class="descubre-text03">
-                    <span>Canjea y Vive:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Usa tus puntos en nuestros negocios asociados y obten
-                    promociones y descuentos exclusivos en prodcutos y
-                    experiencias únicas.
-                  </span>
-                </h6>
+            </div>
+            <div class="descubre-carditem41">
+              <div class="descubre-flexrow1">
+                <div class="descubre-icncirclecirclemdprimarycolor1">
+                  <img
+                    src="assets/images/icons/knowledge.svg"
+                    alt="gameiconsclassicalknowledge1097"
+                    class="descubre-gameiconsclassicalknowledge"
+                  />
+                </div>
+                <div class="descubre-div1">
+                  <h6 class="descubre-text08">
+                    <span class="descubre-text09">
+                      <span>Conexión cultural:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Establece un vínculo con la cultura de tu destino, aprende
+                      su historia y legado, enriquece tu viaje con información
+                      detallada y experiencias inmersivas.
+                    </span>
+                  </h6>
+                </div>
               </div>
             </div>
           </div>
-          <div class="descubre-carditem41">
-            <div class="descubre-flexrow1">
-              <div class="descubre-icncirclecirclemdprimarycolor1">
-                <img
-                  src="assets/images/icons/knowledge.svg"
-                  alt="gameiconsclassicalknowledge1097"
-                  class="descubre-gameiconsclassicalknowledge"
-                />
+          <div class="segundaFila">
+            <div class="descubre-carditem42">
+              <div class="descubre-flexrow2">
+                <div class="descubre-icncirclecirclemdprimarycolor2">
+                  <img
+                    src="assets/images/icons/routes.svg"
+                    alt="mdiroutes1097"
+                    class="descubre-mdiroutes"
+                  />
+                </div>
+                <div class="descubre-div2">
+                  <h6 class="descubre-text14">
+                    <span class="descubre-text15">
+                      <span>Rutas y Recuerdos:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Completa rutas turísticas, cumple objetivos y al final,
+                      recibe un recopilatorio digital de tu experiencia. ¡Guarda y
+                      revive tus aventuras!
+                    </span>
+                  </h6>
+                </div>
               </div>
-              <div class="descubre-div1">
-                <h6 class="descubre-text08">
-                  <span class="descubre-text09">
-                    <span>Conexión cultural:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Establece un vínculo con la cultura de tu destino, aprende
-                    su historia y legado, enriquece tu viaje con información
-                    detallada y experiencias inmersivas.
-                  </span>
-                </h6>
-              </div>
-            </div>
-          </div>
-          <div class="descubre-carditem42">
-            <div class="descubre-flexrow2">
-              <div class="descubre-icncirclecirclemdprimarycolor2">
-                <img
-                  src="assets/images/icons/routes.svg"
-                  alt="mdiroutes1097"
-                  class="descubre-mdiroutes"
-                />
-              </div>
-              <div class="descubre-div2">
-                <h6 class="descubre-text14">
-                  <span class="descubre-text15">
-                    <span>Rutas y Recuerdos:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Completa rutas turísticas, cumple objetivos y al final,
-                    recibe un recopilatorio digital de tu experiencia. ¡Guarda y
-                    revive tus aventuras!
-                  </span>
-                </h6>
-              </div>
-            </div>
-          </div>
-          <div class="descubre-carditem43">
-            <div class="descubre-flexrow3">
-              <div class="descubre-icncirclecirclemdprimarycolor3">
-                <img
-                  src="assets/images/icons/compass.svg"
-                  alt="icomoonfreecompass1097"
-                  class="descubre-icomoonfreecompass"
-                />
-              </div>
-              <div class="descubre-div3">
-                <h6 class="descubre-text20">
-                  <span class="descubre-text21">
-                    <span>Explora y Acumula:</span>
-                    <br />
-                    <span></span>
-                  </span>
-                  <span>
-                    Visita puntos de interés y gana puntos automáticamente con
-                    geolocalización. Multiplica tus puntos interactuando en
-                    lugares emblemáticos.
-                  </span>
-                </h6>
+            </div>          
+            <div class="descubre-carditem43">
+              <div class="descubre-flexrow3">
+                <div class="descubre-icncirclecirclemdprimarycolor3">
+                  <img
+                    src="assets/images/icons/compass.svg"
+                    alt="icomoonfreecompass1097"
+                    class="descubre-icomoonfreecompass"
+                  />
+                </div>
+                <div class="descubre-div3">
+                  <h6 class="descubre-text20">
+                    <span class="descubre-text21">
+                      <span>Explora y Acumula:</span>
+                      <br />
+                      <span></span>
+                    </span>
+                    <span>
+                      Visita puntos de interés y gana puntos automáticamente con
+                      geolocalización. Multiplica tus puntos interactuando en
+                      lugares emblemáticos.
+                    </span>
+                  </h6>
+                </div>
               </div>
             </div>
           </div>
@@ -172,7 +176,7 @@
               <div class="testimonials-cover"></div>
             </div>
             <div class="testimonial-person">
-                <img src = "./assets/images/pictures/manOne.jpg">
+                <img src = "../src/assets/images/pictures/manOne.jpg">
             </div>
             <div class="testimonials-cardcontent">
               <div class="testimonials-div">
@@ -183,27 +187,27 @@
               </div>
               <div class="testimonials-stars">
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_off.svg"
+                  src="../src/assets/images/icons/star_off.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar2"
                 />
@@ -227,7 +231,7 @@
               <div class="testimonials-cover1"></div>
             </div>
             <div class="testimonial-person1">
-                <img src = "./assets/images/pictures/mainTwo.png">
+                <img src = "../src/assets/images/pictures/mainTwo.png">
             </div>
             <div class="testimonials-cardcontent1">
               <div class="testimonials-div1">
@@ -240,27 +244,27 @@
               </div>
               <div class="testimonials-stars1">
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="./assets/images/icons/star_on.svg"
+                  src="../src/assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
