--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <div class="testimonials-cover"></div>
             </div>
             <div class="testimonial-person">
-                <img src = "../src/assets/images/pictures/manOne.jpg">
+                <img src = "./assets/images/pictures/manOne.jpg">
             </div>
             <div class="testimonials-cardcontent">
               <div class="testimonials-div">
@@ -187,27 +187,27 @@
               </div>
               <div class="testimonials-stars">
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_off.svg"
+                  src="./assets/images/icons/star_off.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar2"
                 />
@@ -231,7 +231,7 @@
               <div class="testimonials-cover1"></div>
             </div>
             <div class="testimonial-person1">
-                <img src = "../src/assets/images/pictures/mainTwo.png">
+                <img src = "./assets/images/pictures/mainTwo.png">
             </div>
             <div class="testimonials-cardcontent1">
               <div class="testimonials-div1">
@@ -244,27 +244,27 @@
               </div>
               <div class="testimonials-stars1">
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
                 <img
-                  src="../src/assets/images/icons/star_on.svg"
+                  src="./assets/images/icons/star_on.svg"
                   alt="icnbxstarI1077"
                   class="testimonials-icnbxstar"
                 />
