--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section id="aliados" class="aliados">
-        <h2>Conoce a nuestros aliados</h2>
+        <h2>Conoce nuestros servicios</h2>
         <div class="espacioAliados">
             <div class="cardAliado restaurantes btn">
                 <div class="blurCard"></div>
