--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     class="fotoTesti"
             />
             <div class="nombreTesti">Luis García</div>
-            <div class="descripcionTesti">Usuario Premium</div>
+            <div class="descripcionTesti">1600 puntos ganados en la app</div>
             <img
                     src="assets/images/icons/iconmonstr-quote-3.svg"
                     alt="citaTestimonio"
@@ -286,7 +286,7 @@
                     class="fotoTesti"
             />
             <div class="nombreTesti">María Linares</div>
-            <div class="descripcionTesti">Usuario Premium</div>
+            <div class="descripcionTesti">1500 puntos ganados en la app</div>
             <img
                     src="assets/images/icons/iconmonstr-quote-3.svg"
                     alt="citaTestimonio"
@@ -344,7 +344,7 @@
                     class="fotoTesti"
             />
             <div class="nombreTesti">Luigi Schmitt</div>
-            <div class="descripcionTesti">Usuario Premium</div>
+            <div class="descripcionTesti">2450 puntos ganados en la app</div>
             <img
                     src="assets/images/icons/iconmonstr-quote-3.svg"
                     alt="citaTestimonio"
